--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>League Of Legends Api</title>
-    <link rel="shortcut icon" href="/icon.6aac6de8.png">
-    <link rel="stylesheet" href="/css.967bad95.css">
-<script src="/css.967bad95.js"></script></head>
-<body>
-    <img src="/logo.3f4a1874.png">
-    <div id="data-container"></div>
-    <script type="module" src="/app.c3f9f951.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>League Of Legends Api</title><link rel="icon shortcut" href="/DOR-LOL-1T/icon.2514d2b1.png"><link rel="stylesheet" href="/DOR-LOL-1T/css.b831b433.css"></head><body> <img src="/DOR-LOL-1T/logo.e7ce3639.png"> <div id="data-container"></div> <script type="module" src="/DOR-LOL-1T/app.cbf14b23.js"></script> </body></html>
